# Merline-Engine

./: CMakeLists.txt  Makefile  README.md
GFX/: CMakeLists.txt
example/pong/source/: main.cpp
example/shooter/source/: main.cpp  player.cpp
include/: dodger.h  shooter.h  uiManager.hpp
lib/: CMakeLists.txt
lib/cpp-core/: CMakeLists.txt  Makefile  core.cpp  core.hpp
lib/cpp-core/include/: camera.hpp  core.h  core.hpp  displayableObject.hpp  gameObject.hpp  input.hpp  inputManager.hpp  scene.hpp  sceneManager.hpp  textObject.hpp
lib/cpp-core/src/: camera.cpp  core.cpp  displayableObject.cpp  gameObject.cpp  input.cpp  inputManager.cpp  scene.cpp  sceneManager.cpp  textObject.cpp
lib/cpp-ui/: CMakeLists.txt  Makefile  ui.cpp
source/: dodger.cpp  game.cpp  main.cpp  menu.cpp  player.cpp  timer.cpp
